Add javascript object for project data and dynamic works section

--- a/index.html
+++ b/index.html
@@ -122,137 +122,7 @@
     </header>
 
     <section id="works" class="works">
-      <div class="container grid-container">
-        <h2 class="section-title">Projects</h2>
-        <article class="card">
-          <div class="project-snapshoot">
-            <img
-              src="./img//tonic-project-snapshot.png"
-              alt="tonic project snapshoot"
-            />
-          </div>
-          <div class="project-detail">
-            <h3 class="project-title">Tonic</h3>
-            <ul class="project-metadata">
-              <li class="client">Client</li>
-              <li><span class="counter"></span></li>
-              <li class="role">Role</li>
-              <li><span class="counter"></span></li>
-              <li class="year">Year</li>
-            </ul>
-            <p class="project-description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
-              rerum unde officiis alias amet optio enim nisi? Magni possimus
-              rerum optio fuga expedita.
-            </p>
-            <ul class="languages">
-              <li><span>HTML</span></li>
-              <li><span>CSS</span></li>
-              <li><span>JavaScript</span></li>
-            </ul>
-            <button class="btn btn-see-project" type="button">
-              See Project
-            </button>
-          </div>
-        </article>
-        <article class="card">
-          <div class="project-snapshoot">
-            <img
-              src="./img//multi-post-stories-project-snapshot.png"
-              alt="multi-post stories project snapshoot"
-            />
-          </div>
-          <div class="project-detail">
-            <h3 class="project-title">Multi-post stories</h3>
-            <ul class="project-metadata">
-              <li class="client">Client</li>
-              <li><span class="counter"></span></li>
-              <li class="role">Role</li>
-              <li><span class="counter"></span></li>
-              <li class="year">Year</li>
-            </ul>
-            <p class="project-description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
-              rerum unde officiis alias amet optio enim nisi? Magni possimus
-              rerum optio fuga expedita.
-            </p>
-            <ul class="languages">
-              <li><span>HTML</span></li>
-              <li><span>CSS</span></li>
-              <li><span>JavaScript</span></li>
-            </ul>
-            <button class="btn btn-see-project" type="button">
-              See Project
-            </button>
-          </div>
-        </article>
-        <article class="card">
-          <div class="project-snapshoot">
-            <img
-              src="./img/tonic-two-project-snapshot.png"
-              alt="tonic project two snapshoot"
-            />
-          </div>
-          <div class="project-detail">
-            <h3 class="project-title">Tonic</h3>
-            <ul class="project-metadata">
-              <li class="client">Client</li>
-              <li><span class="counter"></span></li>
-              <li class="role">Role</li>
-              <li><span class="counter"></span></li>
-              <li class="year">Year</li>
-            </ul>
-            <p class="project-description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
-              rerum unde officiis alias amet optio enim nisi? Magni possimus
-              rerum optio fuga expedita.
-            </p>
-            <ul class="languages">
-              <li><span>HTML</span></li>
-              <li><span>CSS</span></li>
-              <li><span>JavaScript</span></li>
-            </ul>
-            <button class="btn btn-see-project" type="button">
-              See Project
-            </button>
-          </div>
-        </article>
-        <article class="card">
-          <div class="project-snapshoot">
-            <img
-              src="./img/multi-post-stories-two-project-snapshot.png"
-              alt="multi-post stories project two snapshoot"
-            />
-          </div>
-          <div class="project-detail">
-            <h3 class="project-title">Multi-post stories</h3>
-            <ul class="project-metadata">
-              <li class="client">Client</li>
-              <li><span class="counter"></span></li>
-              <li class="role">Role</li>
-              <li><span class="counter"></span></li>
-              <li class="year">Year</li>
-            </ul>
-            <p class="project-description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
-              rerum unde officiis alias amet optio enim nisi? Magni possimus
-              rerum optio fuga expedita.
-            </p>
-            <ul class="languages">
-              <li><span>HTML</span></li>
-              <li><span>CSS</span></li>
-              <li><span>JavaScript</span></li>
-            </ul>
-            <button class="btn btn-see-project" type="button">
-              See Project
-            </button>
-          </div>
-        </article>
-      </div>
+      <div class="container grid-container works-container"></div>
     </section>
 
     <section id="about-me" class="about-me">
