--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
             </p>
           </div>
           <form
+            id="contact-form"
             class="contact-form"
             action="https://formspree.io/f/mqknzgky"
             method="post"
@@ -275,9 +276,14 @@
               rows="10"
               maxlength="500"
             ></textarea>
-            <button class="btn contact-form-submit" type="submit">
+            <button
+              type="submit"
+              value="Submit"
+              class="btn contact-form-submit"
+            >
               Get In Touch
             </button>
+            <label id="label-form-error" class="error-messages"></label>
           </form>
         </div>
         <hr />
