add validation error message

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
               maxlength="30"
               required
             />
+            <!-- <label for="email">email</label> -->
             <input
               placeholder="john@domain.com"
               type="email"
