Fix error message diplay styling issue

--- a/index.html
+++ b/index.html
@@ -261,7 +261,6 @@
               maxlength="30"
               required
             />
-            <!-- <label for="email">email</label> -->
             <input
               placeholder="john@domain.com"
               type="email"
@@ -284,7 +283,7 @@
             >
               Get In Touch
             </button>
-            <label id="label-form-error" class="error-messages"></label>
+            <p class="errors-div"></p>
           </form>
         </div>
         <hr />
