Fix missed required property on form textarea

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
               cols="30"
               rows="10"
               maxlength="500"
+              required
             ></textarea>
             <button
               type="submit"
