save form data in local storage

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
             method="post"
           >
             <input
+              class="contact-form-input"
               placeholder="John"
               type="text"
               id="name"
@@ -262,6 +263,7 @@
               required
             />
             <input
+              class="contact-form-input"
               placeholder="john@domain.com"
               type="email"
               name="email"
@@ -269,6 +271,7 @@
               required
             />
             <textarea
+              class="contact-form-input"
               placeholder="write your message here..."
               name="message"
               id="message"
