Fix typo in index html file

--- a/index.html
+++ b/index.html
@@ -1,100 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tekle's Portfolio</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-S9F42FW2CY"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        window.dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'G-S9F42FW2CY');
-    </script>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
-      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header-wrapper">
-        <div class="toolbar">
-          <div class="container flex-container">
-            <div class="logo">
-              <div class="rotate-arround-logo"></div>
-              <a href="./index.html" class="logo-link">TG</a>
-            </div>
-            <!-- Desktop nav -->
-            <nav class="nav-menu">
-              <a href="#" class="btn-menu-toggle">
-                <i class="fas fa-bars"></i>
-              </a>
-              <ul class="nav-list">
-                <li class="nav-link"><a href="#works">Portfolio</a></li>
-                <li class="nav-link"><a href="#about-me">About</a></li>
-                <li class="nav-link"><a href="#contact-me">Contact</a></li>
-              </ul>
-            </nav>
-            <!-- mobile nav -->
-            <nav class="mobile-nav-menu">
-              <a href="#" class="btn-menu-close">
-                <i class="fas fa-times"></i>
-              </a>
-              <ul class="mobile-nav-list">
-                <li class="mobile-nav-link"><a href="#works">Portfolio</a></li>
-                <li class="mobile-nav-link"><a href="#about-me">About</a></li>
-                <li class="mobile-nav-link">
-                  <a href="#contact-me">Contact</a>
-                </li>
-              </ul>
-            </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tekle's Portfolio</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S9F42FW2CY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      window.dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-S9F42FW2CY');
+  </script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header-wrapper">
+      <div class="toolbar">
+        <div class="container flex-container">
+          <div class="logo">
+            <div class="rotate-arround-logo"></div>
+            <a href="./index.html" class="logo-link">TG</a>
           </div>
+          <!-- Desktop nav -->
+          <nav class="nav-menu">
+            <a href="#" class="btn-menu-toggle">
+              <i class="fas fa-bars"></i>
+            </a>
+            <ul class="nav-list">
+              <li class="nav-link"><a href="#works">Portfolio</a></li>
+              <li class="nav-link"><a href="#about-me">About</a></li>
+              <li class="nav-link"><a href="#contact-me">Contact</a></li>
+            </ul>
+          </nav>
+          <!-- mobile nav -->
+          <nav class="mobile-nav-menu">
+            <a href="#" class="btn-menu-close">
+              <i class="fas fa-times"></i>
+            </a>
+            <ul class="mobile-nav-list">
+              <li class="mobile-nav-link"><a href="#works">Portfolio</a></li>
+              <li class="mobile-nav-link"><a href="#about-me">About</a></li>
+              <li class="mobile-nav-link">
+                <a href="#contact-me">Contact</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <div class="headline flex-container">
-          <h1 class="headline--title headline--container">
-            I’m Tekle<br />
-            Glad to see you!
-          </h1>
-          <p class="headline--body headline--container">
-            I’m a software developer! I can help you build a product , feature
-            or website Look through some of my work and experience! If you like
-            what you see and have a project you need coded, don’t hestiate to
-            contact me.
+      </div>
+      <div class="headline flex-container">
+        <h1 class="headline--title headline--container">
+          I’m Tekle<br />
+          Glad to see you!
+        </h1>
+        <p class="headline--body headline--container">
+          I’m a software developer! I can help you build a product , feature
+          or website. Look through some of my work and experience! If you like
+          what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <h3 class="headline--supporting-text headline--container bounce">
+          Let's connect
+        </h3>
+        <ul class="social-media headline--container">
+          <li class="social-meida__list-item">
+            <a href="https://twitter.com/teklegyohannes" class="social-media-items twitter-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+              class="social-media-items linkedin-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="#" class="social-media-items medium-link">
+              <i class="fab fa-medium-m"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="https://github.com/gtekle" class="social-media-items github-link">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="#" class="social-media-items angelist-link">
+              <i class="fab fa-angellist"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
+  <section id="works" class="works">
+    <div class="container grid-container works-container"></div>
+  </section>
+
+  <section id="about-me" class="about-me">
+    <div class="about-me-wrapper container">
+      <div class="about-me-container">
+        <div class="about-me-header">
+          <h2 class="about-me-title">
+            About <br />
+            Myself
+          </h2>
+          <p class="about-me-body">
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
           </p>
-          <h3 class="headline--supporting-text headline--container bounce">
-            Let's connect
-          </h3>
-          <ul class="social-media headline--container">
+          <p class="about-me-suporting-text bounce">Let's connect</p>
+          <ul class="social-media">
             <li class="social-meida__list-item">
-              <a
-                href="https://twitter.com/teklegyohannes"
-                class="social-media-items twitter-link"
-              >
+              <a href="https://twitter.com/teklegyohannes" class="social-media-items twitter-link">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li class="social-meida__list-item">
-              <a
-                href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
-                class="social-media-items linkedin-link"
-              >
+              <a href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+                class="social-media-items linkedin-link">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
@@ -104,10 +142,7 @@
               </a>
             </li>
             <li class="social-meida__list-item">
-              <a
-                href="https://github.com/gtekle"
-                class="social-media-items github-link"
-              >
+              <a href="https://github.com/gtekle" class="social-media-items github-link">
                 <i class="fab fa-github"></i>
               </a>
             </li>
@@ -117,183 +152,91 @@
               </a>
             </li>
           </ul>
+          <button class="btn btn-get-my-resume" type="button">
+            Get my resume
+          </button>
         </div>
-      </div>
-    </header>
-
-    <section id="works" class="works">
-      <div class="container grid-container works-container"></div>
-    </section>
-
-    <section id="about-me" class="about-me">
-      <div class="about-me-wrapper container">
-        <div class="about-me-container">
-          <div class="about-me-header">
-            <h2 class="about-me-title">
-              About <br />
-              Myself
-            </h2>
-            <p class="about-me-body">
-              Hello I’m a software developer! I can help you build a product ,
-              feature or website Look through some of my work and experience! If
-              you like what you see and have a project you need coded, don’t
-              hestiate to contact me.
-            </p>
-            <p class="about-me-suporting-text bounce">Let's connect</p>
-            <ul class="social-media">
-              <li class="social-meida__list-item">
-                <a
-                  href="https://twitter.com/teklegyohannes"
-                  class="social-media-items twitter-link"
-                >
-                  <i class="fab fa-twitter"></i>
-                </a>
+        <div class="about-me-skillset">
+          <div class="programming-languages accordion">
+            <div class="language-head">
+              <h3 class="languages-title">Languages</h3>
+              <a href="#"><i class="fas fa-angle-down"></i></a>
+            </div>
+            <ul class="language-list" id="language-list">
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/javascript-icon.png" alt="CSS3 icon" />
+                  </div>
+                  <p class="language-name">JavaScript</p>
+                </div>
               </li>
-              <li class="social-meida__list-item">
-                <a
-                  href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
-                  class="social-media-items linkedin-link"
-                >
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/html5-icon.png" alt="CSS3 icon" />
+                  </div>
+                  <p class="language-name">HTML</p>
+                </div>
               </li>
-              <li class="social-meida__list-item">
-                <a href="#" class="social-media-items medium-link">
-                  <i class="fab fa-medium-m"></i>
-                </a>
-              </li>
-              <li class="social-meida__list-item">
-                <a
-                  href="https://github.com/gtekle"
-                  class="social-media-items github-link"
-                >
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="social-meida__list-item">
-                <a href="#" class="social-media-items angelist-link">
-                  <i class="fab fa-angellist"></i>
-                </a>
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/css3-icon.png" alt="CSS3 icon" />
+                  </div>
+                  <p class="language-name">CSS</p>
+                </div>
               </li>
             </ul>
-            <button class="btn btn-get-my-resume" type="button">
-              Get my resume
-            </button>
           </div>
-          <div class="about-me-skillset">
-            <div class="programming-languages accordion">
-              <div class="language-head">
-                <h3 class="languages-title">Languages</h3>
-                <a href="#"><i class="fas fa-angle-down"></i></a>
-              </div>
-              <ul class="language-list" id="language-list">
-                <li>
-                  <div class="language-item">
-                    <div class="language-icon">
-                      <img
-                        src="./img/icons/javascript-icon.png"
-                        alt="CSS3 icon"
-                      />
-                    </div>
-                    <p class="language-name">JavaScript</p>
-                  </div>
-                </li>
-                <li>
-                  <div class="language-item">
-                    <div class="language-icon">
-                      <img src="./img/icons/html5-icon.png" alt="CSS3 icon" />
-                    </div>
-                    <p class="language-name">HTML</p>
-                  </div>
-                </li>
-                <li>
-                  <div class="language-item">
-                    <div class="language-icon">
-                      <img src="./img/icons/css3-icon.png" alt="CSS3 icon" />
-                    </div>
-                    <p class="language-name">CSS</p>
-                  </div>
-                </li>
-              </ul>
+          <div class="frameworks accordion">
+            <div class="frameworks-head">
+              <h3 class="frameworks-title">Frameworks</h3>
+              <a href="#"><i class="fas fa-angle-right"></i></a>
             </div>
-            <div class="frameworks accordion">
-              <div class="frameworks-head">
-                <h3 class="frameworks-title">Frameworks</h3>
-                <a href="#"><i class="fas fa-angle-right"></i></a>
-              </div>
-              <hr />
+            <hr />
+          </div>
+          <div class="skills accordion">
+            <div class="skills-head">
+              <h3 class="skills-title">Skills</h3>
+              <a href="#"><i class="fas fa-angle-right"></i></a>
             </div>
-            <div class="skills accordion">
-              <div class="skills-head">
-                <h3 class="skills-title">Skills</h3>
-                <a href="#"><i class="fas fa-angle-right"></i></a>
-              </div>
-              <hr />
-            </div>
+            <hr />
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <footer class="footer">
-      <div class="wrapper">
-        <div id="contact-me" class="contact-me container">
-          <div class="contact-me-header">
-            <h2 class="contact-title headline--container">Contact me</h2>
-            <p class="contact-intro headline--container">
-              If you have an application you are interested in developing, a
-              feature that you need built or a project that needs coding. I’d
-              love to help with it
-            </p>
-          </div>
-          <form
-            id="contact-form"
-            class="contact-form"
-            action="https://formspree.io/f/mqknzgky"
-            method="post"
-          >
-            <input
-              class="contact-form-input"
-              placeholder="John"
-              type="text"
-              id="name"
-              name="name"
-              minlength="2"
-              maxlength="30"
-              required
-            />
-            <input
-              class="contact-form-input"
-              placeholder="john@domain.com"
-              type="email"
-              name="email"
-              id="email"
-              required
-            />
-            <textarea
-              class="contact-form-input"
-              placeholder="write your message here..."
-              name="message"
-              id="message"
-              cols="30"
-              rows="10"
-              maxlength="500"
-              required
-            ></textarea>
-            <button
-              type="submit"
-              value="Submit"
-              class="btn contact-form-submit"
-            >
-              Get In Touch
-            </button>
-            <p class="errors-div"></p>
-          </form>
+  <footer class="footer">
+    <div class="wrapper">
+      <div id="contact-me" class="contact-me container">
+        <div class="contact-me-header">
+          <h2 class="contact-title headline--container">Contact me</h2>
+          <p class="contact-intro headline--container">
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I’d
+            love to help with it
+          </p>
         </div>
-        <hr />
+        <form id="contact-form" class="contact-form" action="https://formspree.io/f/mqknzgky" method="post">
+          <input class="contact-form-input" placeholder="John" type="text" id="name" name="name" minlength="2"
+            maxlength="30" required />
+          <input class="contact-form-input" placeholder="john@domain.com" type="email" name="email" id="email"
+            required />
+          <textarea class="contact-form-input" placeholder="write your message here..." name="message" id="message"
+            cols="30" rows="10" maxlength="500" required></textarea>
+          <button type="submit" value="Submit" class="btn contact-form-submit">
+            Get In Touch
+          </button>
+          <p class="errors-div"></p>
+        </form>
       </div>
-    </footer>
+      <hr />
+    </div>
+  </footer>
 
-    <script src="./js/main.js"></script>
-  </body>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
