--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           Glad to see you!
         </h1>
         <p class="headline--body headline--container">
-          I’m a software developer! I can help you build a product , feature
+          I’m a software developer! I can help you build a product, feature
           or website. Look through some of my work and experience! If you like
           what you see and have a project you need coded, don’t hestiate to
           contact me.
@@ -216,7 +216,7 @@
           <p class="contact-intro headline--container">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d
-            love to help with it
+            love to help with it.
           </p>
         </div>
         <form id="contact-form" class="contact-form" action="https://formspree.io/f/mqknzgky" method="post">
