Add Java language to languages list

--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
                   <p class="language-name">CSS</p>
                 </div>
               </li>
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/java-icon.png" alt="Java language icon" />
+                  </div>
+                  <p class="language-name">Java</p>
+                </div>
+              </li>
             </ul>
           </div>
           <div class="frameworks accordion">
