Add collapse and expand functionality on click to about-me languages section

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="programming-languages accordion">
             <div class="language-head">
               <h3 class="languages-title">Languages</h3>
-              <a href="#"><i class="fas fa-angle-down"></i></a>
+              <a id="languages-show-hide"><i class="fas fa-angle-down"></i></a>
             </div>
             <ul class="language-list" id="language-list">
               <li>
@@ -200,14 +200,14 @@
           <div class="frameworks accordion">
             <div class="frameworks-head">
               <h3 class="frameworks-title">Frameworks</h3>
-              <a href="#"><i class="fas fa-angle-right"></i></a>
+              <a id="frameworks-show-hide"><i class="fas fa-angle-right"></i></a>
             </div>
             <hr />
           </div>
           <div class="skills accordion">
             <div class="skills-head">
               <h3 class="skills-title">Skills</h3>
-              <a href="#"><i class="fas fa-angle-right"></i></a>
+              <a id="skills-show-hide"><i class="fas fa-angle-right"></i></a>
             </div>
             <hr />
           </div>
