Fix resume link error

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </a>
             </li>
           </ul>
-          <button class="btn btn-get-my-resume" type="button" onclick="window.location.href='https://drive.google.com/file/d/1_irp1tktTpOcLxsUtGR9ZTz56ZMNbXYo/view?usp=sharing'">
+          <button class="btn btn-get-my-resume" type="button" onclick="location.href='https://drive.google.com/file/d/1_irp1tktTpOcLxsUtGR9ZTz56ZMNbXYo/view?usp=sharing'">
             Get my resume
           </button>
         </div>
