--- a/index.html
+++ b/index.html
@@ -163,6 +163,22 @@
               <a id="languages-show-hide"><i class="fas fa-angle-down"></i></a>
             </div>
             <ul class="language-list" id="language-list">
+                   <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/java-icon.png" alt="Java language icon" />
+                  </div>
+                  <p class="language-name">Java</p>
+                </div>
+              </li>
+              <li>
+                <div class="language-item">
+                  <div class="language-icon">
+                    <img src="./img/icons/ruby-programming-language.png" alt="Ruby language icon" />
+                  </div>
+                  <p class="language-name">Ruby</p>
+                </div>
+              </li>
               <li>
                 <div class="language-item">
                   <div class="language-icon">
@@ -185,22 +201,6 @@
                     <img src="./img/icons/css3-icon.png" alt="CSS3 icon" />
                   </div>
                   <p class="language-name">CSS</p>
-                </div>
-              </li>
-              <li>
-                <div class="language-item">
-                  <div class="language-icon">
-                    <img src="./img/icons/java-icon.png" alt="Java language icon" />
-                  </div>
-                  <p class="language-name">Java</p>
-                </div>
-              </li>
-              <li>
-                <div class="language-item">
-                  <div class="language-icon">
-                    <img src="./img/icons/java-icon.png" alt="Ruby language icon" />
-                  </div>
-                  <p class="language-name">Ruby</p>
                 </div>
               </li>
             </ul>
