Fix style error on langugage list

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <a id="languages-show-hide"><i class="fas fa-angle-down"></i></a>
             </div>
             <ul class="language-list" id="language-list">
-                   <li>
+              <li>
                 <div class="language-item">
                   <div class="language-icon">
                     <img src="./img/icons/java-icon.png" alt="Java language icon" />
@@ -210,6 +210,13 @@
               <h3 class="frameworks-title">Frameworks</h3>
               <a id="frameworks-show-hide"><i class="fas fa-angle-right"></i></a>
             </div>
+            <ul class="language-list" id="language-list">
+              <li>
+                <div class="language-item">
+                  <p class="language-name">Ruby on Rails</p>
+                </div>
+              </li>
+            </ul>
             <hr />
           </div>
           <div class="skills accordion">
