--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
       </div>
       <div class="headline flex-container">
         <h1 class="headline--title headline--container">
-          I’m Tekle<br />
-          Glad to see you!
+          I’m Tekle
         </h1>
+        <h2>
+          Glad to see you!
+        </h2>
         <p class="headline--body headline--container">
           I’m a software developer! I can help you build a product, feature
           or website. Look through some of my work and experience! If you like
