--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           Glad to see you!
         </h2>
         <p class="headline--body headline--container">
-          I’m a software developer! I can help you build a product, feature
-          or website. Look through some of my work and experience! If you like
-          what you see and have a project you need coded, don’t hestiate to
+          I’m a software engineer! I can help you build a product, feature
+          or RESTful web service. Look through some of my personal works and experience! If you like
+          what you see and have a project you need developed, don’t hestiate to
           contact me.
         </p>
         <h3 class="headline--supporting-text headline--container bounce">
