--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
       </div>
       <div class="headline flex-container">
         <h1 class="headline--title headline--container">
-          I’m Tekle
-        </h1>
-        <h2>
+          I’m Tekle <br />
           Glad to see you!
-        </h2>
+        </h1>
         <p class="headline--body headline--container">
           I’m a software engineer! I can help you build a product, feature
           or RESTful web service. Look through some of my personal works and experience! If you like
