update social media and download resume links to open in new tab

--- a/index.html
+++ b/index.html
@@ -75,28 +75,28 @@
         </h3>
         <ul class="social-media headline--container">
           <li class="social-meida__list-item">
-            <a href="https://twitter.com/teklegyohannes" class="social-media-items twitter-link">
+            <a href="https://twitter.com/teklegyohannes" target=”_blank” class="social-media-items twitter-link">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+            <a href="https://www.linkedin.com/in/gtekle/" target=”_blank” 
               class="social-media-items linkedin-link">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="#" class="social-media-items medium-link">
+            <a href="https://medium.com/@teklegy" target=”_blank” class="social-media-items medium-link">
               <i class="fab fa-medium-m"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="https://github.com/gtekle" class="social-media-items github-link">
+            <a href="https://github.com/gtekle" target=”_blank” class="social-media-items github-link">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li class="social-meida__list-item">
-            <a href="#" class="social-media-items angelist-link">
+            <a href="https://angel.co/u/gtekle" target=”_blank” class="social-media-items angelist-link">
               <i class="fab fa-angellist"></i>
             </a>
           </li>
@@ -126,33 +126,36 @@
           <p class="about-me-suporting-text bounce">Let's connect</p>
           <ul class="social-media">
             <li class="social-meida__list-item">
-              <a href="https://twitter.com/teklegyohannes" class="social-media-items twitter-link">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
-                class="social-media-items linkedin-link">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="#" class="social-media-items medium-link">
-                <i class="fab fa-medium-m"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="https://github.com/gtekle" class="social-media-items github-link">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="#" class="social-media-items angelist-link">
-                <i class="fab fa-angellist"></i>
-              </a>
-            </li>
+            <a href="https://twitter.com/teklegyohannes" target=”_blank” class="social-media-items twitter-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="https://www.linkedin.com/in/gtekle/" target=”_blank” 
+              class="social-media-items linkedin-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="https://medium.com/@teklegy" target=”_blank” class="social-media-items medium-link">
+              <i class="fab fa-medium-m"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="https://github.com/gtekle" target=”_blank” class="social-media-items github-link">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="https://angel.co/u/gtekle" target=”_blank” class="social-media-items angelist-link">
+              <i class="fab fa-angellist"></i>
+            </a>
+          </li>
           </ul>
-          <button class="btn btn-get-my-resume" type="button" onclick="location.href='https://drive.google.com/file/d/1_irp1tktTpOcLxsUtGR9ZTz56ZMNbXYo/view?usp=sharing'">
+          <button 
+            class="btn btn-get-my-resume"
+            type="button"
+            onclick="window.open('https://docs.google.com/document/d/1nIMvrU4RHOyKbYORCWOhM3nSp6cW3UImsuJD578SSdY/edit?usp=sharing'), '_blank'">
             Get my resume
           </button>
         </div>
